<resources>
    <string name="app_name">LifeRec</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_resolve_notification">ResolveNotification</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_context">ContextActivity</string>
    <string name="record_mood_time">Record daily mood</string>
    <string name="record_emo">Record emotion</string>
    <string name="photo">Record diet</string>
    <string name="configuration">Configurations</string>
    <string name="record_act">Record today\'s activities</string>
    <string name="record_enviro">Please record your surroundings:</string>
    <string name="location">Your location:</string>
    <string name="indoor">Indoor</string>
    <string name="outdoor">Outdoor</string>
    <string name="surround">Your surrounding:</string>
    <string name="alone">I\'m alone</string>
    <string name="around_no_conver">Somebody around but no conversation</string>
    <string name="around_conver">Somebody around and conversation</string>
    <string name="where">Where are you？</string>
    <string name="home">At home/dorm</string>
    <string name="classss">At class</string>
    <string name="library">At library</string>
    <string name="lab">At lab/office</string>
    <string name="diner">At diner</string>
    <string name="sports">At sports facilities</string>
    <string name="entertain">At entertainment facilities</string>
    <string name="other_location">Other</string>
    <string name="other_loc_detail">Your Current location (answer below only if you select \'Other\' in the question above):</string>
    <string name="submit">Next</string>
    <string name="feeling">How are you feeling?</string>
    <string name="hellooooo">Hello World!</string>
    <string name="feeling_instruction">Please recall whether there were short-term events that aroused your emotions since the last record\n (events: lasting from seconds to minutes and causing mood changes, i.e. informed of some news, receiving a gift, etc.)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="music_instruction">Please\n1.find a quiet place and put on your headphones.\n2. Click the following song to listen.\n 3. After listening, return to this page to rate your preference and record mood.</string>
    <string name="back">Next</string>
    <string name="user_config">User configuration</string>
    <string name="index">User ID:</string>
    <string name="index_bracelet">Bracelet ID:</string>
    <string name="receive_reminder">Please select time to receive reminders of daily mood recording:</string>
    <string name="reminder_time">Please set reminder time: (At most 10)</string>
    <string name="mark_reminder">Activity recording:</string>
    <string name="modify">Modify</string>
    <string name="supper_reminder">Supper recording:</string>
    <string name="lunch_reminder">Lunch recording:</string>
    <string name="breakfast_reminder">Breakfast recording:</string>
    <string name="save">Save the changes</string>
    <string name="set_time">Set time:</string>
    <string name="finish">Finish</string>
    <string name="add_act">Add activity at the top</string>
    <string name="title">Title</string>
    <string name="singer">Singer(s)</string>
    <string name="set_mood">Set your mood</string>
    <string name="mood_now">What\'s your mood?</string>
    <string name="act_now">What\'s the activity?</string>
    <string name="delighted">delighted</string>
    <string name="del_current">Delete current</string>
    <string name="insert_below">Insert below</string>
    <string name="language">English/中文</string>
    <string name="submit_context">Finish</string>
    <string name="auto_upload_close">Auto uploading close</string>
    <string name="auto_upload_open">Auto uploading open</string>
    <string name="describe_event">Please describe the events that aroused your emotions briefly: </string>
    <string name="How_feel_now">How are you feeling now?</string>
    <string name="How_feel_then">How were you feeling then?</string>
    <string name="What_feel_then">What was your feeling then?</string>
    <string name="music_dialog">Would you like to listen to some music?</string>
    <string name="skip_reminder">Skip current reminder</string>
    <string name="choose_skip_reminder">You choose to skip the reminder</string>
    <string name="remind_latter">Remind me latter</string>
    <string name="choose_remind_latter">Remind in five minutes</string>
    <string name="open_now">Open the App now</string>
    <string name="record_event_time">Please record the time that event happened:</string>
    <string name="record_event">Please describe the events that aroused your emotions briefly</string>
    <string name="past_activity">Please briefly describe your activities in last %1$s minutes:\n (e.g. studying/working, meeting, entertaining, sports, rest, eating, sleeping, others)</string>
    <string name="current_activity">Please briefly describe your activities:\n(e.g. studying/working, meeting, entertaining, sports, rest, eating, sleeping, others)</string>
    <string name="song_rate">Please rate this song:</string>
    <string name="upload_interval">Auto upload Interval(minutes)</string>
    <string name="one">1 (strongly dislike)</string>
    <string name="two">2 (dislike)</string>
    <string name="three">3 (neutral)</string>
    <string name="four">4 (like)</string>
    <string name="five">5 (strongly like)</string>
    <string name="song_rate_continous">Please show your preference with the seek bar.</string>
    <string name="confirm">OK</string>
    <string name="customize">Input time</string>
    <string name="addtime">Add Alarming Time</string>
    <string name="removetime">Remove Last Alarming Time</string>
    <string name="a1">"Alarming time 1  "</string>
    <string name="a2">"Alarming time 2  "</string>
    <string name="a3">"Alarming time 3  "</string>
    <string name="a4">"Alarming time 4  "</string>
    <string name="a5">"Alarming time 5  "</string>
    <string name="a6">"Alarming time 6  "</string>
    <string name="a7">"Alarming time 7  "</string>
    <string name="a8">"Alarming time 8  "</string>
    <string name="a9">"Alarming time 9  "</string>
    <string name="a10">"Alarming time 10  "</string>
</resources>
