<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <Button
            android:id="@+id/btn_mood_request"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:text="@string/record_mood_time" />

        <androidx.slidingpanelayout.widget.SlidingPaneLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0.4" />

        <Button
            android:id="@+id/btn_mood_submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:text="@string/record_emo" />

        <androidx.slidingpanelayout.widget.SlidingPaneLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0.4" />

        <Button
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:text="@string/photo" />

        <androidx.slidingpanelayout.widget.SlidingPaneLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0.4" />

        <Button
            android:id="@+id/btn_setting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_shape_green"
            android:text="@string/configuration" />

        <androidx.slidingpanelayout.widget.SlidingPaneLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0.4" />

        <Button
            android:id="@+id/btn_language"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_shape_green"
            android:text="@string/language" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_trace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_act"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />


</androidx.constraintlayout.widget.ConstraintLayout>
